2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-gnu): Add ffsl, ffsll, quotactl.
	(std-notes): Add restrictions of quotactl.

2014-10-22  Yaakov Selkowitz  <yselkowi@redhat.com>

	* new-features.xml (ov-new1.7.33): Document stime.
	* posix.xml (std-deprec): Add stime.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): s/Linux/glibc.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): Update to current state.

2014-09-05  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.xml (cygdrive): Add /proc/cygdrive description.

2014-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (setfacl): Align documentation to help text in setfacl.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-common): Drop outdated comment about underdeveloped
	Solaris ACL API support.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (setfacl): Drop outdated note that default ACEs are not
	taken into account.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Disable description of db_prefix and db_separator settings.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (getfacl): Document additional suid/sgid/vtx flag printing.

2014-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* configure.ac: Convert to new AC_INIT style.
	* configure: Regenerate.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin-api.xml: Include misc-funcs.xml.
	* misc-funcs.xml: New file.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin-api.xml: Move chapter tags from path.xml back here.
	Include logon-funcs.xml.
	* logon-funcs.xml: Moved from ../cygwin here and converted to XML.
	* path.xml: Drop chapter tags.  Create subsections.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Throughout use parenthesis instead of braces where
	appropriate.
	(DBXDIRS): Remove.