@@ -15,6 +15,7 @@ AC_INIT([Cygwin Documentation], 0,
 AC_CONFIG_SRCDIR(cygwin-api.xml)
 AC_CONFIG_AUX_DIR(../..)
 
+AC_PROG_INSTALL
 AC_NO_EXECUTABLES
 AC_CANONICAL_SYSTEM
 
